test/spec_vectors/type-rec/fail/module_11.wat
(module (rec (type $f1 (func)) (type (struct))) (rec (type (struct)) (type $f2 (func))) (global (ref $f1) (ref.func $f)) (func $f (type $f2)))